# mimemo

./: .gitignore  README.md
mimemo-api/: .env.example  .gitignore  README.md  pyproject.toml
mimemo-api/docs/: colab_gpu_eval.md
mimemo-api/examples/: transcript.sample.json
mimemo-api/mimemo_ai/: __init__.py  api.py  audio.py  cli.py  config.py  domain.py  llm.py  minutes.py  pipeline.py  prompts.py  stt.py  timefmt.py
mimemo-api/scripts/: start_llama_server.sh
mimemo-api/tests/: test_llm.py  test_minutes.py
mimemo-dashboard/: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
mimemo-dashboard/src/app/: globals.css  layout.tsx  page.tsx
mimemo-dashboard/src/components/: provider.tsx
